src/test/resources/scripts/language/parser/valid/algorithms/fizzbuzz.sbsc
fizzbuzz = (i: int): str ->
    if(i >= 1)
        fizzbuzz(i-1) + if(i % 3 == 0)
                            if(i % 5 == 0) "FizzBuzz " else "Fizz "
                        else
                            if(i % 5 == 0) "Buzz " else str(i) + " "
    else "";

println(fizzbuzz(100));

return true;