src/test/resources/scripts/language/parser/invalid/coercion/badComparison.sbsc
a = 3;
b = "2";
println(if(a == b) "a" else "b");

return false;